--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
         </div>
         <figure class="hero__art">
-          <img class="hero__image" src="/assets/mila-cover.png" alt="Illustration from 'Mila's Magical Journey': Mila stands in a colorful enchanted forest with a rainbow of light." />
+          <img class="hero__image" src="assets/mila-cover.png" alt="Illustration from 'Mila's Magical Journey': Mila stands in a colorful enchanted forest with a rainbow of light." />
           <figcaption class="caption">Illustration from the book “Mila's Magical Journey”</figcaption>
         </figure>
       </section>
