--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <nav aria-label="Main navigation">
           <a href="#story">Story</a>
           <a href="#sample">Sample</a>
-          <a href="#buy">Buy</a>
+          <!-- <a href="#buy">Buy</a> -->
         </nav>
       </div>
     </header>
@@ -132,7 +132,7 @@
         <div class="container grid-3">
           <article class="card">
             <h3>What's it about?</h3>
-            <p>Mila discovers a hidden world where wishes whisper and stars show the way. Along her journey she learns that courage often begins very quietly.</p>
+            <p>Mila’s attic holds a secret: a book that opens the door to four enchanted worlds. Her journey teaches her that the greatest magic of all is courage, kindness, and believing in herself.</p>
           </article>
           <article class="card">
             <h3>Who is it for?</h3>
@@ -151,7 +151,12 @@
           <div class="card">
             <h2 style="margin-top:0">Peek inside & sample</h2>
             <p>Explore a few highlights from the book.</p>
-            <blockquote class="quote">“Mila held her breath as the first star spoke to her.”</blockquote>
+            <blockquote class="quote">“Mila found herself drawn into a world of wonder and
+              enchantment. Colours danced around her, and she felt herself being pulled into the
+              book's magical embrace.”</blockquote>
+
+              <blockquote class="quote">“Stepping through the portal she found herself in a world, where the leaves danced in
+                a symphony of reds, oranges, silvers and golds.”</blockquote>
           </div>
         </div>
       </section>
@@ -183,8 +188,21 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        © <span id="y"></span> Liesbeth Ouwehand ·  Mila's Magical Journey · Imprint
+      <div class="container" style="max-width:600px; margin:0 auto; text-align:center;">
+        <h2 style="margin-bottom:10px; font-size:16px; color:#555;">Imprint</h2>
+        <p style="margin:5px 0;">
+          Information according to § 5 German Telemedia Act (TMG):<br>
+          <strong>Liesbeth Ouwehand</strong><br>
+          Hoppenstieg 2<br>
+          21149 Hamburg<br>
+          Germany
+        </p>
+        <p style="margin:5px 0;">
+          E-mail: <a href="mailto:liesbeth@example.com" style="color:#1a73e8; text-decoration:none;">hello@milasmagicaljourney.com</a>
+        </p>
+        <p style="margin-top:10px; font-size:12px; color:#999;">
+          © <span id="y"></span> Liesbeth Ouwehand · Mila's Magical Journey
+        </p>
       </div>
     </footer>
 
